# anywhere

./: CLAUDE.md  Cargo.toml  README.md  webext.toml
apps/ai-anywhere/scripts/: build.sh
apps/ai-anywhere/views/: ui.crepus
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: build.sh
views/: ui.crepus
