[workspace]
resolver = "2"
members = ["runtime"]

[workspace.dependencies]
anywhere-core = { git = "https://github.com/semitechnological/anywhere" }
anywhere-crepuscularity = { git = "https://github.com/semitechnological/anywhere" }
crepuscularity-anywhere-webext = { git = "https://github.com/semitechnological/anywhere" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
